- Add askPrivacyPolicy property. - Add ability to access toggle. - Add toggle property.

--- a/packages/yhub_ui/lib/l10n/yhub_ui_ar.arb
+++ b/packages/yhub_ui/lib/l10n/yhub_ui_ar.arb
@@ -7,6 +7,8 @@
   "alreadyRegistered": "لدي حساب مسبقاً",
   "accept": "أوافق على",
   "termsOfService": "شروط الخدمة",
+  "privacyPolicy": "سياسة الخصوصية",
+  "and": "و",
   "resend": "إعادة ارسال",
   "code": "رمز التحقق",
   "change": "تغيير؟",
