--- a/packages/yhub_ui/lib/l10n/yhub_ui_en.arb
+++ b/packages/yhub_ui/lib/l10n/yhub_ui_en.arb
@@ -7,6 +7,8 @@
   "alreadyRegistered": "Already registered",
   "accept": "I Accept",
   "termsOfService": "Terms of Service",
+  "privacyPolicy": "Privacy Policy",
+  "and": "and ",
   "resend": "Resend",
   "code": "Code",
   "change": "change?",
